@@ -8,6 +8,8 @@ Version 6.3
 * Removed CWinApp::GetFrame
 * Removed CWinApp::SetFrame
 * Changed CFrame::SetView.  Can now change from one view window to another
+* Added FastGDI demo.  Demonstrates the use of the TintBitmap function.
+*
 
 
 
